@@ -222,15 +222,19 @@ ADD_EXECUTABLE(tagtoxfm
  Tagtoxfm/tagtoxfm.h 
 )
 
+ADD_EXECUTABLE(register_resample
+  Register_resample/register_resample.c
+)
+
 IF( LIBMINC_STATIC_LIBRARIES AND BICPL_STATIC_LIBRARIES)
   TARGET_LINK_LIBRARIES(register ${BICGL_LIBRARIES} ${BICPL_STATIC_LIBRARIES} ${LIBMINC_STATIC_LIBRARIES} ${GLUT_LIBRARIES})
 ELSE( LIBMINC_STATIC_LIBRARIES AND BICPL_STATIC_LIBRARIES)
   TARGET_LINK_LIBRARIES(register ${BICGL_LIBRARIES} ${BICPL_LIBRARIES} ${LIBMINC_LIBRARIES} ${GLUT_LIBRARIES})
 ENDIF( LIBMINC_STATIC_LIBRARIES AND BICPL_STATIC_LIBRARIES)  
 
-TARGET_LINK_LIBRARIES(tagtoxfm ${BICPL_LIBRARIES} ${VOLUME_IO_LIBRARIES} ${LIBMINC_LIBRARIES} ${GLUT_LIBRARIES})
+TARGET_LINK_LIBRARIES(tagtoxfm ${BICPL_LIBRARIES} ${VOLUME_IO_LIBRARIES} ${LIBMINC_LIBRARIES})
+TARGET_LINK_LIBRARIES(register_resample ${BICPL_LIBRARIES} ${VOLUME_IO_LIBRARIES} ${LIBMINC_LIBRARIES})
 
 
-INSTALL(TARGETS register tagtoxfm DESTINATION bin)
-INSTALL(FILES register_UI.globals DESTINATION lib${LIB_SUFFIX})
+INSTALL(TARGETS register tagtoxfm register_resample DESTINATION bin)
 
